# matrix-lsq

./: .gitignore  README.rst  pyproject.toml  requirements.txt  setup.cfg
examples/: random-data.py
matrix_lsq/: __init__.py
src/matrix_lsq/: __init__.py  _compressed_versions.py
tests/: test_matrix_lsq.py
