[build-system]
requires = ["setuptools>=42","wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "matrix-lsq"
version = "0.1.0"
description = ""
authors = ["Eivind Fonn <evfonn@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.22.2"
scipy = "^1.8.0"
tqdm = "^4.63.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
