[metadata]
name = matrix-lsq
version = 0.1.0
description = Matrix LSQ
long_description = file: README.rst
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Mathematics

[options]
package_dir =
    = matrix_lsq
packages = find:
python_requires = >=3.9
install_requires =
    numpy>=1.22.2
    scipy>=1.8.0
    tqdm>=4.63.0

zip_safe = no

[options.packages.find]
where = matrix_lsq