[metadata]
name = matrix-lsq
version = 0.1.0
description = Matrix LSQ
long_description = file: README.rst

[options]
package_dir =
    = matrix_lsq
packages = find:
python_requires = >=3.9
install_requires =
    numpy>=1.22.2
    scipy>=1.8.0
    tqdm>=4.63.0

zip_safe = no

[options.packages.find]
where = matrix_lsq