[metadata]
name = matrix-lsq
version = 0.1.0
authors = ["Eivind Fonn <evfonn@gmail.com>"]
description = Matrix LSQ
long_description = file: README.rst
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8,<3.11
install_requires =
    numpy>=1.22.2
    scipy>=1.8.0
    tqdm>=4.63.0

zip_safe = no

[options.packages.find]
where = src